[project]
name = "myagents"
version = "0.1.0"
description = "myagents using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.14.4"
]

[project.scripts]
myagents = "myagents.main:run"
run_crew = "myagents.main:run"
train = "myagents.main:train"
replay = "myagents.main:replay"
test = "myagents.main:test"
run_with_trigger = "myagents.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
